# deletelater_nomadoasisimage

./: README.md  docker-compose.yaml  pyproject.toml
configs/: nomad.yaml
